--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
-addopts = -v --tb=short
+addopts = -v -s --alluredir=allure-results
 testpaths = Tests
 python_files = test_*.py
 log_cli = true
 log_cli_level = INFO
+
+markers =
+    smoke:
+    regression:
